--- a/public/css/main.less
+++ b/public/css/main.less
@@ -62,6 +62,8 @@
 @DefaultPadding : 15px;
 @NeedToKnowHeight: 500px;
 
+
+
 tr th{
   padding-left: 10px;
 }
@@ -1311,4 +1313,129 @@ margin-right: auto;
 
 .no-margin{
   margin:0 !important;
+}
+.mobile{
+  display: none;
+}
+
+
+.menu-hamburger{
+  background: white;
+  border: none;
+  height: 100%;
+  font-size: 2.2em;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+
+@media (max-width: 1100px)  {
+    .desktop{
+      display: none;
+    }
+    .mobile{
+      display: block;
+    }
+    .custom-container{
+      padding-left: 0 !important;
+
+    }
+    .content-area{
+        padding-top: 115px !important;
+    }
+    .top-wrapper{
+      padding-left: 0 !important;
+      height: auto;
+      z-index: 9999999;
+    }
+    .top-row{
+      height: 50px !important;
+
+    }
+    .logo{
+      margin-top: -10px;
+      margin-left: 15px;
+    }
+  .mobile-menu{
+      width: 100%;
+      position: fixed;
+      display: flex;
+      z-index: 9999999;
+      left: -100%;
+      transition:all .2s ease-out;
+    }
+
+    .open-mobile{
+      left: 0 !important;
+    }
+    .mobile-row{
+      height: 50px;
+      flex-grow: 2;
+      max-width: 100%;
+      background-color: @gray-dark;
+      padding-left: 15px;
+      color: white;
+      line-height: 50px;
+      border-bottom: @gray 1px solid;
+      cursor: pointer;
+      display: flex;
+      &:hover{
+        background-color: @gray;
+
+      }
+
+    }
+
+    .mobile-row-l2{
+        height: 25px;
+        max-width: 100%;
+        border-bottom: white 1px solid;
+        color: white;
+        line-height: 25px;
+        padding-left: 30px;
+        background-color: @gray;
+    }
+    .expand-button-wrapper{
+        margin-left: auto;
+    }
+    .expand-mobile{
+      background-color: @gray-dark;
+      border: none;
+      border-left: 1px solid @gray;
+      border-right: 1px solid @gray;
+      height: 100%;
+      width: 50px;
+      height: 49px;
+      cursor: pointer;
+      &:hover{
+        background-color: @gray;
+      }
+    }
+    .mobile-l2{
+      height: 0;
+      transition:all .2s ease-out;
+      background-color: coral;
+          overflow: hidden;
+    }
+    .close-wrapper{
+      width: 50px;
+      background-color: @gray-dark;
+
+      .close-mobile{
+        width: 100%;
+        height: 50px;
+        background-color: @gray-dark;
+        border: none;
+        border-bottom: 1px solid @gray;
+        color: white;
+      }
+    }
+
+    .row-wrapper{
+      flex-grow: 2;
+    }
+    .user-icon{
+      height: 75%;
+      margin-top: 5px;
+    }
 }
