Home screen mobile
Swap home screen with tabbed mobile screen

--- a/public/index.jade
+++ b/public/index.jade
@@ -1,5 +1,5 @@
 div.content-area(Id="homeIndexDiv" ng-controller='homeIndexController' style="padding-top: 175px")
-    .info-wrapper.full-width.no-padding
+    .info-wrapper.full-width.no-padding.desktop
       .primary-info.no-padding
         .info-wrapper-center
           .need-to-know-wrapper
@@ -72,6 +72,82 @@ div.content-area(Id="homeIndexDiv" ng-controller='homeIndexController' style="pa
           img(src="images/cfesidebar.png")
         div(ng-if="selectedLocation == 'MS'")
           img(src="images/meadowlark.png" )
+    div.mobile
+      div
+        ul.nav.nav-tabs(role='tablist' id="myTabs")
+          li.active(role='presentation')
+            a(href='#home', aria-controls='home', role='tab', data-toggle='tab' ng-click="ctrl.clearFilters()") News
+          li(role='presentation')
+            a(href='#profile', aria-controls='profile', role='tab', data-toggle='tab' ng-click="ctrl.clearFilters()") Location  
+        .tab-content
+          #home.tab-pane.active.grade-pain(role='tabpanel')
+            .need-to-know-wrapper
+              .header.full-width(style="margin-top: -15px;")
+                h3.no-padding Featured Story
+              .need-to-know-flex(style="flex-direction:column;")
+                .featured-story(style="display: flex;")
+                  .story-img(style="min-width: 300px;max-width: 300px;height: 175px;")
+                    img(src="images/featuredImage.jpg" style="max-width:100%;max-height:100%;")
+                  .story-info
+                    span.text-muted.small-text {{featuredStory.Metadata.CreatedOn}}
+                      span(ng-repeat="tag in featuredStory.Tags") |&nbsp{{tag}}&nbsp
+                    p.bold.no-margin {{featuredStory.Name}}
+                    p {{featuredStory.Description}}
+                .story-scroll-wrapper
+                  span(style="padding-bottom:15px; display: block").small-text.bold Recent News:
+                  .story.news-item(ng-repeat="story in newsItems")
+                    p.news-text.no-margin {{story.Name}}
+                    span.text-muted.small-text {{story.Metadata.CreatedOn}}
+                      span(ng-repeat="tag in story.Tags") |&nbsp{{tag}}&nbsp
+                    hr.thin-padding-hr
+            .scroll-footer
+              span(style='color: black') Scroll for more stories
+          #profile.tab-pane.topic-pain(role='tabpanel')
+            div.location-select-wrapper
+              div.bold.small-text YOUR LOCATION AT A GLANCE:
+              div
+                select.teacher-select(selectpicker ng-model='selectedLocation' style="width: 100%; margin-bottom: 10px; margin-top: 5px;")
+                  option(selected value='MS') Meadowlark School
+                  option(value = 'CFE') Center For Education
+              div.text-muted.small-text Report an Error
+            hr
+            div( ng-if="selectedLocation == 'CFE'")
+              img(src="images/cfesidebar.png" style="margin-left: auto;margin-right: auto;display: table-caption;")
+            div(ng-if="selectedLocation == 'MS'")
+              img(src="images/meadowlark.png" style="margin-left: auto;margin-right: auto;display: table-caption;")
+        .dynamic-info-wrapper(style="margin-left:auto; margin-right:auto; padding-left: 30px; padding-top: 15px;" )
+          div(ng-if="currentUser == 'Steve Jacob'" style="display:flex")
+            .left-content
+              .large-text
+                span.bold Quick Links
+                span(style="font-style: italic;")  for Custodians
+              .top-content(style="margin-top: 30px;")
+                .bold(style="margin-bottom: 5px; font-size: 1.3em;") TOP CONTENT
+                div(ng-repeat="item in topContent" ng-show="item.Role == 'Custodian'" style="margin-left: 15px;")
+                  a(ng-click="ctrl.redirectToTop(item)") 
+                    i.fa.fa-file-o(style="margin-right:10px;")
+                    span(stlye="padding-left:10px;") {{item.Name}}
+            .right-content(style="margin-left:auto;")
+              img(src="images/bulletinboard.png")
+
+          div(ng-if="currentUser == 'Samantha Nugent'")
+            .left-content.pull-left
+              .large-text
+                  span.bold Quick Links
+                  span(style="font-style: italic;")  for Teachers
+              .bold TEACHER MADE CURRICULUM RESOURCES
+              .text-muted A place for teachers to share resources with each other
+              select.teacher-select(selectpicker=''  style="min-width: 500px; width: 75%" ng-model="selectedShareSite" ng-options="site.Url as site.Name for site in shareSites track by site.Url")
+                option(disabled="" selected="" value="") Subject...
+              button.techer-select-button(ng-click="ctrl.openSite()" ng-disabled="selectedShareSite == ''") GO
+              .top-content(style="margin-top: 30px;").pull-left
+                .bold(style="margin-bottom: 5px; font-size: 1.3em;") TOP CONTENT
+                div(ng-repeat="item in topContent" ng-show="item.Role == 'Teacher'" style="margin-left: 15px;")
+                  a(ng-click="ctrl.redirectToTop(item)")
+                    i.fa.fa-file-o(style="margin-right:10px;")
+                    span(stlye="padding-left:10px;") {{item.Name}}
+              .right-content.pull-right
+                img(src="images/bulletinboard.png")
 script(src='js/app/home/dataService.js')
 script(src='js/app/home/index/controller.js')
 script(src='js/app/home/index/main.js')
