--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1328,6 +1328,9 @@ margin-right: auto;
   padding-right: 15px;
 }
 
+.location-select-wrapper{
+      margin-top: 15px;
+}
 
 @media (max-width: 1100px)  {
     .desktop{
@@ -1342,6 +1345,13 @@ margin-right: auto;
 
     .content-area{
         padding-top: 115px !important;
+        transition:all .2s ease-out;
+    }
+    .content-area-open{
+      background-color: @gray-dark;
+      .l1-mobile-nav{
+        color: white !important;
+      }
     }
     .top-wrapper{
       padding-left: 0 !important;
@@ -1355,6 +1365,14 @@ margin-right: auto;
     .logo{
       margin-top: -10px;
       margin-left: 15px;
+    }
+
+    .expanding-nav{
+      background-color: @gray-dark;
+      width: 100%;
+      height: 0;
+      overflow: hidden;
+      transition:all .2s ease-out;
     }
   .mobile-menu{
       width: 100%;
