--- a/public/levelOne.jade
+++ b/public/levelOne.jade
@@ -2,6 +2,16 @@ div(Id="levelOneDiv" ng-controller='levelOneController')
   .content-area
     div(ng-show="employeeBar")
       != partial("_partials/employeeBar")
+    .mobile.l1-mobile-nav(style='margin: 15px;' ng-click="ctrl.toggleExpandingNav()")
+      div(style='width: 100%; border: 1px solid black') In this section
+      .expanding-nav
+        div.mobile-item-wrapper(ng-repeat="item in sectionItems track by $index")
+          div.mobile-row(id='{{$index}}-l1' ng-click="ctrl.redirectToL1Nav(item)")
+            div {{item.Name}}
+            div.expand-button-wrapper.pull-right
+              button.expand-mobile(ng-click='ctrl.mobileL1(item,$index);$event.stopPropagation(); ')
+                i.fa.fa-sort-desc(ng-hide='ctrl.isOpenMobile($index)')
+                i.fa.fa-sort-asc(ng-show='ctrl.isOpenMobile($index)')
     .info-wrapper
       .primary-info
         h2 {{currentItem.Id}} Overview
@@ -9,7 +19,7 @@ div(Id="levelOneDiv" ng-controller='levelOneController')
           div.primary-image
           p(ng-bind-html='currentItem.Description | trust')
         != partial("_partials/sectionItems")
-      .secondary-info
+      .secondary-info.desktop
         div.news-item-wrapper
           span.sub-heading NEWS
           div.news-item(ng-repeat="news in relatedNews")
