--- a/public/_partials/sectionItems.jade
+++ b/public/_partials/sectionItems.jade
@@ -1,4 +1,4 @@
-.section-nav
+.section-nav.desktop
   h3 In this section
   .section-flex-container
     .section-flex-item(ng-repeat="item in sectionItems")
