--- a/public/index.jade
+++ b/public/index.jade
@@ -72,7 +72,7 @@ div.content-area(Id="homeIndexDiv" ng-controller='homeIndexController' style="pa
           img(src="images/cfesidebar.png")
         div(ng-if="selectedLocation == 'MS'")
           img(src="images/meadowlark.png" )
-    div.mobile
+    div.mobile(style="margin-top: 15px;")
       div
         ul.nav.nav-tabs(role='tablist' id="myTabs")
           li.active(role='presentation')
