--- a/public/levelTwo.jade
+++ b/public/levelTwo.jade
@@ -9,7 +9,7 @@ div(Id="levelTwoDiv" ng-controller='levelTwoController')
             p(ng-bind-html="currentItem.Description | trust")
         != partial("_partials/sectionItems")
         != partial("_partials/documentsAccordian")
-      .secondary-info
+      .secondary-info.desktop
       
         
 script(src='js/app/levelTwo/dataService.js')
