--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1342,10 +1342,18 @@ margin-right: auto;
     .custom-container{
       padding-left: 0 !important;
     }
-
+    .info-wrapper{
+      padding: 15px;
+          width: 100%;
+    }
     .content-area{
         padding-top: 115px !important;
         transition:all .2s ease-out;
+        padding-left: 0 !important
+    }
+    .content-area > img {
+      max-width: 100%;
+      margin-left: -15px !important;
     }
     .content-area-open{
       background-color: @gray-dark;
@@ -1369,10 +1377,16 @@ margin-right: auto;
 
     .expanding-nav{
       background-color: @gray-dark;
+      margin-top: 15px;
       width: 100%;
       height: 0;
       overflow: hidden;
       transition:all .2s ease-out;
+    }
+    .teacher-select.l1-mobile-nav{
+      border: 1px solid white !important;
+      color: white;
+      background-color: @gray-dark;
     }
   .mobile-menu{
       width: 100%;
@@ -1392,7 +1406,6 @@ margin-right: auto;
       position: fixed;
         display: flex;
         width: 100%;
-      background-color: @gray-dark;
       z-index: 9999999;
       color: white;
       transition:all .2s ease-out;
@@ -1461,6 +1474,7 @@ margin-right: auto;
     }
     .close-wrapper{
       width: 50px;
+      height: 50px;
       background-color: @gray-dark;
 
       .close-mobile{
