--- a/public/levelOne.jade
+++ b/public/levelOne.jade
@@ -6,14 +6,14 @@ div(Id="levelOneDiv" ng-controller='levelOneController')
       div.teacher-select(style='width: 100%; border: 1px solid black') In this section
       .expanding-nav
         div.mobile-item-wrapper(ng-repeat="item in sectionItems track by $index")
-          div.mobile-row(id='{{$index}}-l1' ng-click="ctrl.redirectToL1Nav(item);$event.stopPropagation();")
+          div.mobile-row(id='{{$index}}-l1' ng-click="ctrl.redirectToSectionItem(item);$event.stopPropagation();")
             div {{item.Name}}
             div.expand-button-wrapper.pull-right(ng-show='item.hasChildren')
               button.expand-mobile(ng-click='ctrl.mobileL1(item,$index);$event.stopPropagation(); ')
                 i.fa.fa-sort-desc(ng-hide='ctrl.isOpenMobile($index)')
                 i.fa.fa-sort-asc(ng-show='ctrl.isOpenMobile($index)')
           div.mobile-l2(id='{{$index}}-l2')
-            div.mobile-row-l2(ng-repeat="item in l3NavItems" ng-click="ctrl.redirectToL2Nav(item)") {{item.Name}}
+            div.mobile-row-l2(ng-repeat="item in l3NavItems" ng-click="ctrl.redirectToSectionItemL3(item)") {{item.Name}}
     .info-wrapper
       .primary-info
         h2 {{currentItem.Id}} Overview
