--- a/public/levelThree.jade
+++ b/public/levelThree.jade
@@ -10,7 +10,7 @@ div(Id="levelThreeDiv" ng-controller='levelThreeController')
         .section-items-mini
           != partial("_partials/sectionItems")
         != partial("_partials/documentsAccordian")
-      .secondary-info
+      .secondary-info.desktop
         
 script(src='js/app/levelThree/dataService.js')
 script(src='js/app/levelThree/controller.js')
