--- a/public/index.jade
+++ b/public/index.jade
@@ -85,7 +85,7 @@ div.content-area(Id="homeIndexDiv" ng-controller='homeIndexController' style="pa
               .header.full-width(style="margin-top: -15px;")
                 h3.no-padding Featured Story
               .need-to-know-flex(style="flex-direction:column;")
-                .featured-story(style="display: flex;")
+                .featured-story(style="display: flex; flex-direction: column;")
                   .story-img(style="min-width: 300px;max-width: 300px;height: 175px;")
                     img(src="images/featuredImage.jpg" style="max-width:100%;max-height:100%;")
                   .story-info
