Mobile facet bug
fixed display bug for mobile facets

--- a/public/curriculumnAndAssesment.jade
+++ b/public/curriculumnAndAssesment.jade
@@ -1,5 +1,5 @@
 div.content-area(Id="curriculumDiv" ng-controller='curriculumController')
-  div.curric-facet-menu.mobile(style='display: flex !important;')
+  div.curric-facet-menu.mobile-flex
     div.select-criteria
       div.select-header-wrapper
       div.grade-select-wrapper.select-row
