--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1324,7 +1324,9 @@ margin-right: auto;
 .mobile{
   display: none;
 }
-
+.mobile-flex{
+  display: none;
+}
 
 .menu-hamburger{
   background: white;
@@ -1405,6 +1407,10 @@ transition:transform .2s ease-out;
     }
     .mobile{
       display: block;
+    }
+
+    .mobile-flex{
+        display: flex;;
     }
     .option-set{
       max-height: none;
