--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1348,7 +1348,23 @@ margin-right: auto;
 body{
 transition:transform .2s ease-out;
 }
+
+
+.bottom-flex{
+  display: flex;
+  flex-direction: column;
+  .right-content{
+    margin-left: -15px;
+  display: flex;
+  flex-wrap: wrap;
+max-width: 100%;
+  }
+}
 @media (max-width: 1100px)  {
+
+  .bottom-flex{
+
+  }
     .desktop{
       display: none;
     }
